--- a/style.css
+++ b/style.css
@@ -1,9 +1,65 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+@media (max-width:786px) {
+  nav {
+    height: 68px;
+  }
+  h1 {
+    font-size: 28px;
+  }
+  .about-me__info--para {
+    font-size: 18px;
+  }
+  .language {
+    width: calc(100%/3)
+  }
+  .project__desctiption--para {
+    font-size: 14px;
+  }
+  project__description  {
+    left: 30px;
+    padding-right: 30px;
+  }
+}
+/*==========
+SMALL PHONES
+========== */
+@media (max-width: 480px) {
+  .nav__link:not(:last-child) {
+    display: none;
+  }
+  .project__description {
+    padding: 0;
+    left: 0;
+    width: 100%;
+  }
+  }
+  .project__description--para {
+    display: none;
+  }
+  .project__description--links {
+    display: flex;
+    justify-content: center;
+  }
+  .project__description--title {
+    font-size: 32px;
+    line-height: 1;
+    text-align: center;
+  }
+  .project__description--sub-title {
+    text-align: center;
+    margin: 12px 0;
+  }
+
 * {
   font-family: "Roboto", sans-serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 h1,
@@ -25,6 +81,39 @@ h1 {
 p {
   line-height: 1.5;
   font-size: 16px;
+}
+
+i {
+  text-decoration: none;
+  position: relative;
+  transition: opacity 300ms ease;
+}
+
+a:hover {
+  opacity: 0.7;
+}
+
+.link__hover-effect::after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 0%;
+  bottom: -3px;
+  right: 0;
+  transition: all 300ms ease;
+}
+
+.link__hover-effect--white::after {
+  background-color: #ffffff;
+}
+
+.link__hover-effect--black::after {
+  background-color: #242424;
+}
+
+.link__hover-effect:hover::after {
+  width: 100%;
+  left: 0;
 }
 
 li {
@@ -83,7 +172,6 @@ nav {
 .nav__link--anchor {
   margin: 0 12px;
   color: #242424;
-  text-decoration: none;
   font-weight: 700;
 }
 
@@ -133,30 +221,68 @@ nav {
   overflow: hidden;
   box-shadow: 0 8px 26px rgba(0, 0, 0, 0.16);
   margin-bottom: 28px;
+  animation: animate-profile-picture 800ms ease 200ms backwards;
 }
 
+@keyframes animate-profile-picture {
+  0% {transform: scale(0);}
+  80% {transform: scale(1.1);}
+  100% {transform: scale(1);}
+}
+
+.wave {
+  display: inline-block;
+  animation: animate-wave 500ms infinite ease-in-out;
+
+}
+
+@keyframes animate-wave {
+  0% {transform: rotate(0)}
+  50% { transform: rotate(30deg)}
+  100% { transform: rotate(0)}
+}
 .about-me__picture {
   width: 100%;
 
   /* IMPROVING PICTURE */
   transform: scale(1.5);
   padding-top: 8px;
+  animation: fade-in 1200ms ease;
+}
+
+@keyframes fade-in { 
+  0% {
+    opacity:0;
+  }
+  100% { opacity: 1;}
 }
 
 .about-me__info--title {
   margin-bottom: 16px;
+  animation: fade-up 650ms 400ms backwards;
 }
 
 .about-me__info--para {
   font-size: 20px;
   margin-bottom: 28px;
+  animation: fade-up 650ms 600ms backwards;
+}
+
+.about-me__link {
+  font-size: 20px;
+  color: #242424;
+  padding: 0 16px;
 }
 
 .about-me__links {
-  font-size: 20px;
-  color: #242424;
-  text-decoration: none;
-  padding: 0 16px;
+  animation: fade-up 650ms 800ms backwards;
+}
+
+@keyframes fade-up {
+  0%{ opacity: 0;
+  transform: translateY(40px);}
+  100%{opacity: 1;
+  transform: translateY(0);}
 }
 
 .about-me__image--container {
@@ -184,9 +310,9 @@ nav {
 }
 
 .language__img:hover {
-filter: brightness(80%);
-opacity: 0.86;
-transform: scale(0.9);
+  filter: brightness(80%);
+  opacity: 0.86;
+  transform: scale(0.9);
 }
 
 .language__name {
@@ -198,7 +324,7 @@ transform: scale(0.9);
   opacity: 0;
 }
 
-.language:hover .language__name{
+.language:hover .language__name {
   transform: scale(1);
   opacity: 1;
 }
@@ -215,4 +341,141 @@ transform: scale(0.9);
   width: 100%;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+/* Projects */
+
+.project {
+  margin-bottom: 135px;
+}
+
+.project:last-child {
+  margin-bottom: 48px;
+}
+
+.project__img {
+  width: 100%;
+  transition: all 500ms ease;
+}
+
+.project:hover .project__description {
+  opacity: 1;
+  transform: translateY(-50%);
+}
+
+.project__wrapper {
+  position: relative;
+  display: flex;
+  box-shadow: 0 20px 80px rgba(0, 0, 0, 0.45);
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.project__wrapper::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #1c1d25;
+  opacity: 0;
+  transition: opacity 450ms ease;
+  z-index: 1;
+}
+
+.project:hover .project__wrapper::before {
+  opacity: 0.7;
+}
+
+.project:hover .project__img {
+  transform: scale(1.07);
+  filter: blur(5px);
+}
+
+.project__list {
+  padding-top: 40px;
+}
+
+.project__description {
+  position: absolute;
+  top: 50%;
+  left: 90px;
+  transform: translateY(100%);
+  max-width: 550px;
+  opacity: 0;
+  z-index: 2;
+  transition: transform 450ms, opacity 300ms;
+}
+
+.project__description--title {
+  font-size: 40px;
+}
+
+.project__description--para {
+  margin: 16px 0;
+}
+
+.project__description--link {
+  font-size: 20px;
+  margin-right: 16px;
+}
+
+.project__description--title,
+.project__description--sub-title,
+.project__description--para,
+.project__description--link {
+  text-align: left;
+  color: #ffffff;
+}
+
+/* FOOTER */
+
+footer {
+  background-color: #242424;
+}
+
+.footer__logo--img {
+  width: 70px;
+  height: 70px;
+}
+
+.footer__row {
+  padding: 8% 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer__social--links {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+.footer__social--link,
+.footer__copyright,
+.footer__logo--popper {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.footer__anchor {
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.footer__logo--popper {
+  position: absolute;
+  top: 35px;
+  right: 0;
+  opacity: 0;
+  transition: all 300ms ease;
+}
+.footer__anchor:hover .footer__logo--popper {
+  transform: translateX(60px);
+  opacity: 1;
 }
